--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^4.6.0",
+    "concurrently": "^6.0.0",
+    "firebase": "^8.3.2",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.12.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
