--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-typist": "^2.0.5",
     "styled-components": "^5.2.2",
     "web-vitals": "^1.1.1"
   },
