--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "concurrently": "^6.0.0",
+    "dotenv": "^9.0.0",
     "firebase": "^8.3.2",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.3",
