--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "concurrently": "^6.0.0",
     "dotenv": "^9.0.0",
@@ -24,6 +25,8 @@
     "react-scripts": "4.0.3",
     "react-typist": "^2.0.5",
     "styled-components": "^5.2.2",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.16.7",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -49,5 +52,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
